overflow solved

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -2,13 +2,12 @@
   min-height: 100vh;
   color: var(--main-green);
   background-color: #272727;
-  max-width: 100vw; /* !!! */
-/*   display: flex;
+  width: 100vw; /* !!! */
+/*     
   justify-content: center;
   align-items: center;
   flex-direction: column; */
  /*  color: var(--main-black); */
-   justify-content: center;
   padding: 8rem 2rem;
 }
 
