--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -7,6 +7,7 @@
   padding-bottom: 5rem;
   justify-content: center;
   min-height: 100dvh;
+  width: 100svw;
 }
 
 .projects-container{
@@ -33,7 +34,7 @@
 
 .project-card{
 width:100%;
-max-width: 550px;
+max-width: 450px;
 display: flex;
 flex-direction: column;
 align-items: center;
@@ -42,6 +43,7 @@ border-radius: 2.5rem;
 padding:2rem;
 font-size: 2rem;
 backdrop-filter: blur(2px);
+justify-content: space-between;
 }
 
 .img-carousel{
@@ -62,17 +64,21 @@ margin-top: 1.5em;
 font-size: 1.5rem;
 }
 
+.card-buttons{
+  margin-top: 1rem;
+}
+
 .card-button{
   text-decoration: none;
   color: #272727;
   margin-right: 3rem;
-  background: green;
+  background: var(--main-green);
   padding:0.2em 1em;
-  border-radius: 10px;
+  border-radius: 5px;
   transition: 0.2s ease-in;
 }
 .card-button:hover{
-color: green;
+color: var(--main-green);
 background:  #272727;
 }
 
