--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   background-color: #272727;
+  width: 100svw;
 }
 
 .content {
