--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
